# docs-to-md

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/docs_to_md/: jina.py  main.py  parser.py  utils.py
src/tests/: test_parser.py  test_utils.py
