[project]
name = "docs-to-md"
version = "0.1.2"
description = "Convert readthedocs to markdown"
authors = [{ name = "ackness", email = "ackness8@gmail.com" }]
dependencies = [
    "httpx>=0.27.2",
    "openai>=1.50.0",
    "lxml>=5.3.0",
    "requests>=2.32.3",
    "tqdm>=4.66.5",
    "click>=8.1.7",
    "setuptools>=75.1.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
d2m = "docs_to_md.main:main"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pre-commit>=3.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/docs_to_md"]
